# SlicerMEMOS

./: .gitignore  CMakeLists.txt  LICENSE  MEMOS.s4ext  MEMOSExtension.s4ext  MODEL_WEIGHTS.txt  README.md  SlicerMEMOSExtension.s4ext
MEMOS/: CMakeLists.txt  MEMOS.py
MEMOS/Scripts/: MEMOS_inference.py
TrainingScripts/: FOR_HPC_memos_train_monai140.py  FOR_HPC_memos_train_monai140_SINGLE_GPU.py  dataset_KOMP_baseline_edited.json  dataset_KOMP_baseline_original.json  train_monai140.py  unetr_komp_segmentation_3d_final.ipynb
